--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@lenaorobei/app-builder-template",
-  "version": "1.0.2",
-  "description": "A template for testing purposes",
+  "name": "@litviachenko/app-builder-template",
+  "version": "1.0.1",
+  "description": "A template for testing purposes [1.0.1]",
   "engines": {
     "node": "^14 || ^16"
   },
