--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "@litviachenko/app-builder-template",
-  "version": "1.0.10",
-  "description": "A template for testing purposes [1.0.10]",
+  "version": "1.0.0",
+  "description": "A template for testing purposes [1.0.0]",
   "engines": {
     "node": "^14 || ^16"
   },
-  "scripts": {
-    "test": "npm run lint",
-    "lint": "eslint ."
-  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/lenaorobei/app-builder-template.git"
+    "url": "https://github.com/slitviachenko/app-builder-template.git"
   },
   "keywords": [
     "aio",
@@ -21,23 +17,5 @@
     "aio-app-builder-template"
   ],
   "author": "Adobe Inc.",
-  "license": "Apache-2.0",
-  "devDependencies": {
-    "@types/jest": "^25.1.0",
-    "eol": "^0.9.1",
-    "eslint": "^7.1.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jest": "^23.1.1",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "jest": "^27",
-    "stdout-stderr": "^0.1.13",
-    "yeoman-assert": "^3.1.1",
-    "yeoman-test": "^6.0.0",
-    "yeoman-environment": "^3.2.0",
-    "lodash.clonedeep": "^4.5.0",
-    "js-yaml": "^4.1.0"
-  }
+  "license": "Apache-2.0"
 }
