--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,15 @@
 {
-    "plugins": ["jest"],
-    "extends": ["standard", "plugin:jest/recommended"],
-    "globals": {
-      "n": "readonly",
-      "r": "readonly",
-      "assertDependencies": "readonly",
-      "assertNodeEngines": "readonly"
-    }
+  "plugins": [
+    "jest"
+  ],
+  "extends": [
+    "standard",
+    "plugin:jest/recommended"
+  ],
+  "globals": {
+    "n": "readonly",
+    "r": "readonly",
+    "assertDependencies": "readonly",
+    "assertNodeEngines": "readonly"
   }
-  
+}
