--- a/install.yml
+++ b/install.yml
@@ -3,42 +3,18 @@
 
 # we use json schema
 $schema: http://json-schema.org/draft-07/schema
-# (TBD) this is a versioning property
 $id: https://adobe.io/schemas/app-builder-templates/1
 
 categories:
   - action
-  - ui
 
 # if the template implements an extension point, this top-level property is available
 extension:
   serviceCode: dx/excshell/1
 
-# these are the optional environment variables
-# these values may be used instead of interactive input
-env:
-  - SOMEKEY
-
-# workspaces required. Runtime namespaces are added by default for each workspace,
-# if Runtime is one of the Services listed below (all or nothing)
-# Staging and Production are the defaults if not provided (if a Service is set)
-workspaces:
-  - Staging
-  - Production
-  - Development
-
 # required apis, listed by their SDK code
 # any config for the api is listed under the api
 apis:
-  - code: AnalyticsSDK
-    credentials: OAuth
-  - code: CampaignStandard
-  - code: Runtime
-  - code: Events
-    hooks:
-      - postdeploy: some command
-  - code: Mesh
-    endpoints:
-      - my-action: https://some-action.com/action
+  - code: AssetComputeSDK
 
 runtime: true
